--- a/src/components/MoviePickr.css
+++ b/src/components/MoviePickr.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 .movie-items {
-  background-color: #f2f1f1;
+  background-color: #f9f9f9;
   width: 80vw;
   display: flex;
   flex-direction: row;
@@ -45,4 +45,28 @@ h1 {
   overflow-x: hidden;
   margin: 5px 30px;
   font-weight: 300;
+}
+
+.notfound-info p {
+  color: #4855b7;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between;
+  margin-top: 7rem;
+  font-size: 35px;
+  font-family: "BioRhyme", serif;
+}
+
+.notfound-info i {
+  display: flex;
+  color: #4855b7;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between;
+  font-size: 60px;
 }
