--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -5,24 +5,24 @@ img {
   padding-bottom: 130px;
 }
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Verdana', sans-serif;
+  font-family: "M PLUS Rounded 1c", sans-serif;
 }
 
-.body{
+.body {
   height: 100vh;
-  background: linear-gradient(to bottom, #F95B3D, #FF7851);
+  background: linear-gradient(to bottom, #f95b3d, #ff7851);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-	flex-wrap: nowrap;
+  flex-wrap: nowrap;
 }
 
-.container{
+.container {
   width: 90%;
   height: 400px;
   max-width: 1360px;
@@ -30,28 +30,64 @@ img {
   padding: 30px;
   background: #fff;
   display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: flex-start;
-	align-items: flex-start;
-	align-content: stretch;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: stretch;
 }
 
-p{
-  font-weight: bold;
-  background: linear-gradient(to right, #F95B3D, #FF7851);
+p {
+  font-weight: 800;
+  background: linear-gradient(to right, #f95b3d, #ff7851);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   max-width: 1350px;
   text-transform: uppercase;
-  line-height: .77;
-  
+  line-height: 0.77;
 }
 
-.title, p {
+.title {
   font-size: 80px;
 }
 
-.slogan, p {
+.slogan {
   font-size: 60px;
+}
+
+.start {
+  font-weight: 800;
+  font-size: 28px;
+  text-align: center;
+  cursor: pointer;
+  max-width: 300px;
+  width: 100%;
+  outline: 3px solid;
+  outline-color: #f95b3d;
+  outline-offset: 40px;
+  transition: all 800ms cubic-bezier(0.2, 0, 0, 0.8);
+}
+
+.start:hover {
+  outline-color: #ff7851;
+  outline-offset: 20px;
+}
+
+.links {
+  padding-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+}
+
+.food {
+  width: 250px;
+  margin-left: 100px;
+}
+
+.movie {
+  width: 250px;
+  margin-left: 50px;
 }
