--- a/src/components/FoodPickr/FoodPickr.css
+++ b/src/components/FoodPickr/FoodPickr.css
@@ -1,3 +1,39 @@
+.body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #f95b3d, #ff7851);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.filter-title {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 60px;
+  margin: 50px;
+  margin-top: 100px;
+}
+
+.explanation {
+  width: 400px;
+  height: auto;
+  display: flex;
+  justify-content: flex-start;
+  color: #fff;
+  font-size: 25px;
+  text-align: right;
+  padding-top: 30px;
+}
+
 .h1 {
   font-family: "BioRhyme", serif;
   color: #4855b7;
@@ -18,28 +54,30 @@
 }
 
 .food-info {
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 15px 0;
 }
 
+.food-container {
+  display: flex;
+  justify-content: space-around;
+}
+
 .food-items img {
-  width: 189px;
-  height: 282px;
-  box-shadow: 3px 8px 6px #4855b7;
+  width: auto;
+  height: 200px;
 }
 
-.food-info span {
-  color: #4855b7;
+.food-img {
+  height: 230px;
+  width: auto;
+  margin: 15px;
+  box-shadow: 3px 8px 6px #7b5c56;
 }
 
-.food-info p {
-  font-family: "Poppins", sans-serif;
-  max-height: 150px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  margin: 5px 30px;
-  font-weight: 300;
+.list-style {
+  list-style: none;
 }
