--- a/src/components/MoviePickr/MoviePickr.css
+++ b/src/components/MoviePickr/MoviePickr.css
@@ -12,6 +12,12 @@
   flex-wrap: nowrap;
 }
 
+.title-page {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
 .filter-title {
   color: #fff;
   display: flex;
@@ -23,11 +29,26 @@
   margin-top: 100px;
 }
 
+.filters {
+  display: flex;
+}
+
+.filter-boxes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 5px;
+}
+
+.filter-label {
+  color: #fff;
+  text-align: left;
+  margin-top: 20px;
+}
+
 .explanation {
   width: 400px;
   height: auto;
-  /* display: flex;
-  justify-content: flex-start; */
   color: #fff;
   font-size: 25px;
   text-align: right;
@@ -36,7 +57,7 @@
 
 .movie-items {
   background-color: #f9f9f9;
-  width: 50vw;
+  max-width: 700px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -77,17 +98,15 @@
 .notfound-info {
   color: #fff;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  align-content: space-between;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
   margin-top: 7rem;
   font-size: 35px;
 }
 
-h5 {
-  color: #fff;
-  text-align: left;
-  margin-top: 20px;
-}
+
+
+
