--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -24,8 +24,8 @@
 
 .container {
   width: 90%;
-  height: 400px;
-  max-width: 1360px;
+  height: 440px;
+  width: 760px;
   margin: 0 auto;
   padding: 30px;
   background: #fff;
