--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -1,8 +1,8 @@
 .logo-homepage {
-  height: 280px;
+  height: 250px;
   width: auto;
   display: flex;
-  padding-bottom: 100px;
+  padding-bottom: 70px;
 }
 
 * {
@@ -13,7 +13,7 @@
 }
 
 .body-home {
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(to bottom, #f95b3d, #ff7851);
   display: flex;
   justify-content: center;
@@ -26,7 +26,7 @@
   width: 90%;
   height: 440px;
   width: 760px;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
   padding: 30px;
   background: #fff;
   display: flex;
